List of changes:
================

v0.2.0
- Support all rotation orders and add missing XZY, YZX, ZYX rotation
- Better support for custom skeletons:
  Bone coordinate system can now be mapped in blueprint.
- Fix a synchronization bug when using Neuron format

v0.1.0
- Initial plugin version created.
  (Based and included in Third Person Perception Neuron (TM) Template v0.3.0)